# Curso_Django_Web_Rest_Framework

./: README.md  pyproject.toml
django_estudo/: manage.py
django_estudo/django_estudo/: asgi.py  settings.py  urls.py  wsgi.py
projeto/: settings.py
